# atOS

./: .gdbinit  .gitignore  CMakeLists.txt  CREDITS  LICENSE  Makefile  README.md  bochs_win.bxrc  bochsout.txt  bochsrc.txt  build_iso.bat  build_iso.sh  build_n_run.bat  build_n_run.sh  bx_enh_dbg.ini  debug.sh  gdb_connect.sh  linker.ld  makefile  qemu_start.bat  start.bat  start.sh
.github/workflows/: build.iso.yml
ATOS/[BOOT]/: Boot-NoEmul.img
DOCS/: CODE_DOCUMENTATION.md  DEBUGGING.md  DEVELOPING.md  DRIVER_IMPLEMENTATION.md  README.md
ISO_DIR/: BASE.txt
ISO_DIR/INNER/INNER2/: INSIDE_1.txt
SCRIPTS/: DISSASEMBLE.sh  GLOBALS.bat  HOT_RELOAD.sh  RUN.sh  RUN_ISO.bat  SYNC_UPSTREAM_DEVELOPMENT.sh
SOURCE/: README.md  USER_PROGRAMS
SOURCE/BOOTLOADER/: BOOTLOADER.asm  DISK_VBR.asm  README.md  README.txt
SOURCE/COMPILER/: README.md
SOURCE/KERNEL/: KERNEL.asm  KERNEL.c  KERNEL.ld  KERNEL_ENTRY.asm  KERNEL_ENTRY_DATA.inc  MEMORY.txt  README.md  README.txt  RTOSKRNL.asm  RTOSKRNL.c  TODO  kernel.ld  rtoskernel.ld
SOURCE/KERNEL/16-BIT-BIOS/: BIOS.inc  DATA.inc  IO.asm  ISO.asm  KERNEL_ENTRY_DATA.inc  README.txt  STR.asm
SOURCE/KERNEL/32KRNL/DRIVERS/: README.txt
SOURCE/KERNEL/32RTOSKRNL/: KERNEL.h  KERNEL.inc  MEMORY.inc  MEMORY.md  MEMORY.txt  README.md  README.txt  RTOSKRNL.h  RTOSKRNL.inc
SOURCE/KERNEL/32RTOSKRNL/CPU/: INTERRUPTS.c  INTERRUPTS.h  PIC.c  PIC.h  README.md  TIMER.c  TSS.c
SOURCE/KERNEL/32RTOSKRNL/CPU/FPU/: FPU.c  FPU.h
SOURCE/KERNEL/32RTOSKRNL/CPU/GDT/: GDT.c  GDT.h
SOURCE/KERNEL/32RTOSKRNL/CPU/IDT/: IDT.c  IDT.h
SOURCE/KERNEL/32RTOSKRNL/CPU/INTERRUPTS/: INTERRUPTS.c  INTERRUPTS.h
SOURCE/KERNEL/32RTOSKRNL/CPU/IRQ/: IRQ.c  IRQ.h
SOURCE/KERNEL/32RTOSKRNL/CPU/ISR/: ISR.c  ISR.h
SOURCE/KERNEL/32RTOSKRNL/CPU/LDT/: LDT.c  LDT.h
SOURCE/KERNEL/32RTOSKRNL/CPU/PIC/: PIC.c  PIC.h
SOURCE/KERNEL/32RTOSKRNL/CPU/PIT/: PIT.c  PIT.h
SOURCE/KERNEL/32RTOSKRNL/CPU/STACK/: STACK.h
SOURCE/KERNEL/32RTOSKRNL/DEBUG/: KDEBUG.c  KDEBUG.h  KDPRINT.c  KDPRINT.h
SOURCE/KERNEL/32RTOSKRNL/DRIVERS/: ATA_SHARED.h  DRIVER_INC.h  README.md
SOURCE/KERNEL/32RTOSKRNL/FS/: README.md
SOURCE/KERNEL/32RTOSKRNL/ISO/: ISO.asm
SOURCE/KERNEL/32RTOSKRNL/MEMORY/: E820.c  E820.h  GDT_IDT.h  MEMORY.h  MEMORY.inc  README.md
SOURCE/KERNEL/32RTOSKRNL/NIC/: NIC.c  NIC.h
SOURCE/KERNEL/32RTOSKRNL/RTOSKRNL/: RTOSKRNL_INTERNAL.c  RTOSKRNL_INTERNAL.h
SOURCE/KERNEL/32RTOSKRNL/SYSCALL/: README.md  README.txt  SYSCALL_MIN.inc
SOURCE/KERNEL/BIOS/: README.txt
SOURCE/KERNEL/BIOS/IO/: BIOS_PRNT.asm
SOURCE/PROGRAMS/: USER_PROGRAMS.ld  USER_PROGRAMS.txt
SOURCE/PROGRAMS/COMPILER/: README.md
SOURCE/PROGRAMS/SHELL/: CMakeLists.txt  COMMANDS.c  COMMANDS.h  FONT8x16.h  INPUTS.c  LOOP.c  README.md  SHELL.c  SHELL.h  SHELL_SCREEN.h  VOUTPUT.c  VOUTPUT.h
SOURCE/PROGRAMS/TEST1/: CMakeLists.txt  Makefile  TEST1.c  TEST1.h  TEST1_2.c
SOURCE/SHELL/: README.md  SHELL.c  SHELL.h
SOURCE/STD/: ASM.h  ATOSMINDEF.h  BINARY.h  BITMAP.c  BITMAP.h  CPU_IO.inc  DEBUG.c  DEBUG.h  FS_DISK.c  FS_DISK.h  GRAPHICS.c  GRAPHICS.h  IO.c  IO.h  LOGICAL_COMPARISON.inc  MATH.c  MATH.h  MEM.c  MEM.h  PROC_COM.c  PROC_COM.h  README.md  STACK.inc  STD.h  STDIO.h  STRING.c  STRING.h  TIME.h  TYPEDEF.h  TYPES.h
SOURCE/STD/IO/: I.asm  I.c  I.h  IO.h  O.asm  O.c  O.h
TOOLS/: ISO9660.out  makefile
TOOLS/DUMP_MODES/: DUMP_MODES.c
TOOLS/ETHERNET/: ETHERNET.py
TOOLS/FAT/: FAT16.c
TOOLS/FONT/: FONT_TO_C_ARR.py
TOOLS/FUNC_REF/: FUNC_REF.c
TOOLS/ISO9660/: ISO9660.c  ISO9660.h  RB.bat
release_building/: installer.nsi  linux.sh  setup.ps1  uninstall.ps1  update_version.py  win.bat
release_building/C_CPP_BASE.AppDir/: .DirIcon  AppRun  C_CPP_BASE.desktop
source/: BOOTLOADER.ASM  bootloader.asm  bootloader_1.asm  bootloader_1_fat16-32.asm  bootloader_1_fat32.asm  cpp_main.cpp  kernel.asm  kernel.h  kernel_1.c  main.c  main.h  second.c
tools/fat/: fat.c
z-linux/: build.sh  run.sh
z-linux/scripts/: del.sh  globals.sh
z-win/: build.bat  run.bat
z-win/scripts/: del.bat  globals.bat  msvs-dev-env.bat
(+99 files in other folders)
